--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @use '../libs/ui/input/src/lib/input/input.scss';
-@import 'app.scss';
+@use 'app.scss';
 
 /* You can add global styles to this file, and also import other style files */
 :root {
